CAUSEWAY-3859: Java record refactoring (part 5)